[project]
name = "abyssal-loot-tracker"
version = "0.1.0"
description = "Abyssal Loot Tracker for EVE Online"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pyperclip>=1.9.0",
    "textual>=3.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"